--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@ window.app = {
       <input type="hidden" name="sid1" value="alex">
       <input type="hidden" name="sid2" value="alex2">
       <input type="hidden" name="sid3" value="alex3">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://crystalix-official.github.io/co-or/success/index.html">
                 </form>
               </div>
             </div>
@@ -566,7 +566,7 @@ window.app = {
       <input type="hidden" name="sid1" value="alex">
       <input type="hidden" name="sid2" value="alex2">
       <input type="hidden" name="sid3" value="alex3">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://crystalix-official.github.io/co-or/success/index.html">
                 </form>
               </div>
             </div>
